--- a/docs/.vuepress/theme/package.json
+++ b/docs/.vuepress/theme/package.json
@@ -26,7 +26,7 @@
   "_resolved": "https://registry.npmjs.org/vuepress-theme-reco/-/vuepress-theme-reco-1.2.2.tgz",
   "_shasum": "2ba430738128bd7eabf24eabdc8c907d17ba5383",
   "_spec": "vuepress-theme-reco@1.2.2",
-  "_where": "E:\\vuepress\\znote",
+  "_where": "E:\\vuepress\\doc",
   "author": {
     "name": "reco_luan"
   },
